<resources>
    <string name="app_name">OpenPark</string>
    <string name="check_connections">Check Internet Connections</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="rotate">0</string>
    <string name="register_new_visitor">Register new visitor</string>
    <string name="search_by_mobile_number">Search by Mobile number</string>
    <string name="charge_wallet">Charge Wallet</string>
    <string name="language">Language</string>
    <string name="signout">SignOut</string>
    <string name="choose_language">Choose language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="cancel">Cancel</string>
    <string name="want_logout_from_app">Are you sure to log out from app?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="charge">Chrage Wallet</string>
    <string name="read_card_number">Read Card Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="submit">Charge</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="or">Or</string>
    <string name="invalid_username_password">Invalid username and password</string>
    <string name="add_new_visitor">Add New Visitor</string>
    <string name="enter_ssn_number">Enter SSN number</string>
    <string name="enter_car_number">Enter driving license</string>
    <string name="add">Add</string>
    <string name="enter_ssn">Enter SSN Number</string>
    <string name="search_by_phone">Search by phone</string>
    <string name="search">Search</string>
    <string name="user_notFound">User Not Found</string>
    <string name="enter_ammount">Enter Ammount</string>
    <string name="success">Charge Wallet Succesfully</string>
    <string name="cant_charge">Can\'t Charge this Wallet</string>
    <string name="charge_by_cardnumber">Charge by CardNumber</string>
    <string name="charge_by_phone">Charge by Phone</string>
    <string name="add_card">Add Card</string>
    <string name="user_not_found">User Not Found.</string>
    <string name="cant_add_card_new">Can\'t Add New Card</string>
    <string name="added_sucess">Card Added Successfully</string>
    <string name="enter_card_number">Read Card Number</string>
    <string name="name">Name : </string>
    <string name="ssn">SSN: </string>
    <string name="driver_licence">driveLicence: </string>
    <string name="balance">balance: </string>
    <string name="cant_read_card">Cant read card</string>
    <string name="cant_add_visitor">Can\'t add new visitor</string>
    <string name="visitor_added_sucess">New Visitor added Successfully</string>
    <string name="reports">Reports</string>
    <string name="plate_number">Plate Number</string>
    <string name="enter_plate_num">Enter Plate Number</string>
    <string name="redeem_wallet">Redeem wallet</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="bin_code">Bin Code</string>
    <string name="enterpincode">Enter Pin Code</string>
    <string name="invalid_pincode">Invalid card number or Pin code</string>
    <string name="cant_redme_wallet">Cant Redeem Wallet</string>
    <string name="redmee_wallet_successfully">Redeem Wallet Successfully</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="no_data_found">No Data Found</string>
    <string name="invalid_card">Invalid Card Number</string>
</resources>