<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:id="@+id/toolbar"
        android:layout_marginTop="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_keyboard_backspace_black_18"
            android:id="@+id/backBtn"
            android:padding="10dp"
            android:rotation="@string/rotate"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge"
            android:id="@+id/title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="5dp"
        android:id="@+id/viewone"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/viewone"
        android:src="@drawable/logoo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/logo"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/cardNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:background="@drawable/roundedbuttonprimary"
        android:gravity="center"
        android:text="@string/read_card_number"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="Autofill,RtlCompat" />
    <TextView
        android:id="@+id/txt_charge_cardNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        android:gravity="center"
        android:text="@string/charge_by_cardnumber"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="Autofill,RtlCompat" />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/or"
        android:visibility="visible"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_charge_cardNumber"
        tools:ignore="Autofill,RtlCompat" />

    <TextView
        android:id="@+id/txt_charge_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        android:gravity="center"
        android:text="@string/charge_by_phone"
        android:padding="5dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        tools:ignore="Autofill,RtlCompat" />
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:hint="@string/enter_phone_number"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="gone"
        android:inputType="phone"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="Autofill,RtlCompat"
        android:gravity="center"
        android:background="@drawable/roundedbuttonprimary"
        android:padding="5dp"
        />


    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:hint="@string/enter_amount"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="gone"
        android:inputType="number|numberDecimal"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="Autofill,RtlCompat"
        android:gravity="center"
        android:background="@drawable/roundedbuttonprimary"
        android:padding="5dp"
        />
    <EditText
        android:id="@+id/amount_Frid"
        android:layout_width="match_parent"
        android:hint="@string/enter_amount"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="gone"
        android:inputType="number|numberDecimal"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="Autofill,RtlCompat"
        android:gravity="center"
        android:background="@drawable/roundedbuttonprimary"
        android:padding="5dp"
        />



    <Button
        android:id="@+id/btn_charge_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/roundedbuttonblue"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <Button
        android:id="@+id/btn_charge_frid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:background="@drawable/roundedbuttonblue"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>