<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ReportsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:id="@+id/toolbar"
        android:layout_marginTop="5dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_keyboard_backspace_black_18"
            android:id="@+id/backBtn"
            android:padding="10dp"
            android:rotation="@string/rotate"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            android:id="@+id/title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="5dp"
        android:id="@+id/viewone"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recy_reports"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/lightgray"
        app:layout_constraintBottom_toTopOf="@+id/btn_redeem"
        app:layout_constraintTop_toBottomOf="@+id/viewone" />


    <Button
        android:id="@+id/btn_redeem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/roundedbuttonblue"
        android:text="@string/redeem_wallet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>